--- a/JitterBuffer.vcxproj
+++ b/JitterBuffer.vcxproj
@@ -45,7 +45,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -75,18 +75,19 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CJitterBuffer.h" />
+    <ClInclude Include="CMockDecoder.h" />
+    <ClInclude Include="CMockRenderer.h" />
     <ClInclude Include="IDecoder.h" />
     <ClInclude Include="IJitterBuffer.h" />
-    <ClInclude Include="IRender.h" />
-    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="IRenderer.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CJitterBuffer.cpp" />
+    <ClCompile Include="CMockDecoder.cpp" />
+    <ClCompile Include="CMockRenderer.cpp" />
     <ClCompile Include="JitterBuffer.cpp" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
