--- a/JitterBuffer.vcxproj
+++ b/JitterBuffer.vcxproj
@@ -79,9 +79,9 @@
     <ClInclude Include="MockDecoder.h" />
     <ClInclude Include="MockRenderer.h" />
     <ClInclude Include="FrameFragments.h" />
-    <ClInclude Include="Decoder.h" />
-    <ClInclude Include="IJitterBuffer.h" />
-    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="DecoderInterface.h" />
+    <ClInclude Include="JitterBufferInterface.h" />
+    <ClInclude Include="RendererInterface.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
