--- a/JitterBuffer.vcxproj
+++ b/JitterBuffer.vcxproj
@@ -75,15 +75,21 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="JitterBuffer.h" />
+    <ClInclude Include="BitstreamQueue.h" />
     <ClInclude Include="DecoderInterface.h" />
+    <ClInclude Include="DecoderQueue.h" />
+    <ClInclude Include="JitterBuffer.h" />
     <ClInclude Include="JitterBufferInterface.h" />
     <ClInclude Include="RendererInterface.h" />
+    <ClInclude Include="RendererQueue.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BitstreamQueue.cpp" />
+    <ClCompile Include="DecoderQueue.cpp" />
     <ClCompile Include="JitterBuffer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="RendererQueue.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
