--- a/JitterBuffer.vcxproj
+++ b/JitterBuffer.vcxproj
@@ -78,12 +78,16 @@
     <ClInclude Include="DecoderInterface.h" />
     <ClInclude Include="JitterBuffer.h" />
     <ClInclude Include="JitterBufferInterface.h" />
+    <ClInclude Include="MockDecoder.h" />
+    <ClInclude Include="MockRenderer.h" />
     <ClInclude Include="RendererInterface.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="JitterBuffer.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MockDecoder.cpp" />
+    <ClCompile Include="MockRenderer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
