Adding more to the renderbuffer test

--- a/LazyBuffer/LazyBuffer.vcxproj.filters
+++ b/LazyBuffer/LazyBuffer.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="LazyBuffer.cpp">
+    <ClCompile Include="LazyBufferTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
