--- a/Frame/Frame.vcxproj.filters
+++ b/Frame/Frame.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Frame.cpp">
+    <ClCompile Include="FrameTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
